News/Changelog
==============


0.2.0 (2011-05-??)
------------------

* Added a ``toc`` function that outputs a table of contents.
* Renamed ``markdown`` function to ``html``.
* Updated Upskirt files;
  See commits from 2011-05-02 to 2011-05-07:
  https://github.com/tanoku/upskirt/commits/master/


0.1.1 (2011-05-01)
------------------

* Updated Upskirt files; a HTML escaping bug in the XHTML renderer was fixed.


0.1.0 (2011-05-01)
------------------

* Initial release.