@@ -82,3 +82,4 @@ Render flags:
     HTML_SKIP_IMAGES
     HTML_EXPAND_TABS
     HTML_USE_XHTML
+    HTML_SMARTYPANTS
