@@ -5,6 +5,7 @@ News/Changelog
 0.2.0 (2011-05-??)
 ------------------
 
+* Added Smartypants render flag.
 * Added a ``toc`` function that outputs a table of contents.
 * Renamed ``markdown`` function to ``html``.
 * Updated Upskirt files;
